refactor: 카테고리 목록 조회 API 수정